; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_raid1.c__allow_barrier.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_raid1.c__allow_barrier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r1conf = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.r1conf*, i32)* @_allow_barrier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_allow_barrier(%struct.r1conf* %0, i32 %1) #0 {
  %3 = alloca %struct.r1conf*, align 8
  %4 = alloca i32, align 4
  store %struct.r1conf* %0, %struct.r1conf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.r1conf*, %struct.r1conf** %3, align 8
  %6 = getelementptr inbounds %struct.r1conf, %struct.r1conf* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %7, i64 %9
  %11 = call i32 @atomic_dec(i32* %10)
  %12 = load %struct.r1conf*, %struct.r1conf** %3, align 8
  %13 = getelementptr inbounds %struct.r1conf, %struct.r1conf* %12, i32 0, i32 0
  %14 = call i32 @wake_up(i32* %13)
  ret void
}

declare dso_local i32 @atomic_dec(i32*) #1

declare dso_local i32 @wake_up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
